--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'pub.devrel:easypermissions:3.0.0'
 
+    implementation 'com.google.cloud:google-cloud-texttospeech:2.28.0'
+    implementation 'com.google.api.grpc:grpc-google-cloud-texttospeech-v1:0.69.0'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:0.16.2'
+    implementation 'io.grpc:grpc-okhttp:1.54.1'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.19.0'
 
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
@@ -72,6 +77,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
-    apply plugin: 'com.google.gms.google-services'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 }
+apply plugin: 'com.google.gms.google-services'
