--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,7 @@ plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
 }
+
+tasks.register('clean', Delete) {
+    delete rootProject.buildDir
+}
