--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.github.AgnaldoNP:ANPAudioRecorder:1.0'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
