--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.6.21'
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
@@ -12,7 +13,7 @@ buildscript {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.5'
         classpath 'com.android.tools.build:gradle:7.0.4'
-
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -21,6 +22,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
 
 tasks.register('clean', Delete) {
