--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,10 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.28'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
