--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,9 @@ dependencies {
 
     implementation 'com.chaos.view:pinview:1.4.4'
 
+    implementation 'com.github.Dhaval2404:ColorPicker:2.3'
+
+
 
 
 }
