--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,7 @@
         android:theme="@style/Theme.Laya"
         tools:targetApi="31">
         <activity
-            android:name=".Onboarding"
-            android:exported="false" />
-        <activity
-            android:name=".CustomPinActivity"
+            android:name=".OnboardingActivity"
             android:exported="false" />
         <activity
             android:name=".SetupPasscode"
