audio recorder bug fixed for android 13+

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,5 @@ dependencyResolutionManagement {
 rootProject.name = "Laya"
 include ':app'
 include ':audiorecorder'
+include ':ffmpeg-recorder'
+include ':core'
