--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,39 +29,51 @@
         android:theme="@style/Theme.Laya"
         tools:targetApi="31">
         <activity
+            android:noHistory="true"
             android:name=".ForgotPin"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".SecurityQuestions"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".OnboardingActivity"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".SetupPasscode"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".Passcode"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".Account"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".EditCategory"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".EditAudio"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".AddAudio"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".AddCategory"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".ParentAccessAudio"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
@@ -71,22 +83,28 @@
             </intent-filter>
         </activity>
         <activity
+            android:noHistory="true"
             android:name=".Dashboard"
             android:configChanges="orientation|screenSize"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".SelectLanguage"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".Register"
             android:exported="false" />
         <activity
+            android:noHistory="true"
             android:name=".Settings"
             android:exported="true" />
         <activity
+            android:noHistory="true"
             android:name=".ParentalAccess"
             android:exported="true" />
         <activity
+            android:noHistory="true"
             android:name=".MainActivity"
             android:exported="true" />
     </application>
