--- a/audiorecorder/build.gradle
+++ b/audiorecorder/build.gradle
@@ -55,9 +55,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.github.WindSekirun.NaraeAudioRecorder:core:1.3.0'
     implementation 'nl.bravobit:android-ffmpeg:1.1.5'
-    implementation 'com.github.WindSekirun.NaraeAudioRecorder:ffmpeg-recorder:1.3.0'
+    implementation project(":core")
+    implementation project(":ffmpeg-recorder")
     implementation "io.reactivex.rxjava2:rxjava:2.1.8"
 
+
 }
+
