--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 
 buildscript {
     ext.kotlin_version = '1.6.21'
+
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
@@ -16,8 +17,12 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.5'
         classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3"
+
     }
-}
+
+    }
+
 
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -33,4 +38,7 @@ plugins {
 
 tasks.register('clean', Delete) {
     delete rootProject.buildDir
+}
+ext {
+    libraryVersion = "1.4.0"
 }
